# quickbar

./: .SRCINFO  .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  install.sh  main.xml  metadata.json  plasma6-applets-quickbar-0.1.0-1-x86_64.pkg.tar.zst
.github/workflows/: packaging.yml
packaging/: README.md
packaging/arch/: AUR.md  PKGBUILD  README.md
packaging/debian/: changelog  control
packaging/rpm/: quickbar.spec
pkg/plasma6-applets-quickbar/: .BUILDINFO  .MTREE  .PKGINFO
po/: CMakeLists.txt
qml/: AppNameLabel.qml  MenuDelegate.qml  config.qml  configAppearance.qml  configBehavior.qml  configGeneral.qml  main.qml
scripts/: release-0.2.1.sh
src/: appmenumodel.cpp  appmenumodel.h  genericmenu.cpp  genericmenu.h  menushortcutsender.cpp  quickbarapplet.cpp  quickbarapplet.h
src/quickbar-0.1.0/: main.xml
src/quickbar-0.1.0/.github/workflows/: packaging.yml
src/quickbar-0.1.0/packaging/: README.md
src/quickbar-0.1.0/packaging/debian/: copyright
src/quickbar-0.1.0/packaging/rpm/: quickbar.spec
src/quickbar-0.1.0/qml/: MenuDelegate.qml  config.qml  configAbout.qml  configGeneral.qml  main.qml
src/quickbar-0.1.0/src/: appmenumodel.h  menushortcutsender.h
